Food Crud Operation

--- a/templates/accounts/custDashboard.html
+++ b/templates/accounts/custDashboard.html
@@ -86,9 +86,9 @@
                                                 <li class="order-heading-titles">
                                                     <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
                                                     <div>Apr 9,2020</div>
-                                                    <div>£ 38.99</div>
-                                                    <div>£ 3.90</div>
-                                                    <div>£ 35.09</div>
+                                                    <div>₹ 38.99</div>
+                                                    <div>₹ 3.90</div>
+                                                    <div>₹ 35.09</div>
                                                     <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
                                                 </li>
                                                 
@@ -97,17 +97,17 @@
                                                 <li class="order-heading-titles">
                                                     <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
                                                     <div>Apr 9,2020</div>
-                                                    <div>£ 26.22</div>
-                                                    <div>£ 2.62</div>
-                                                    <div>£ 23.60</div>
+                                                    <div>₹ 26.22</div>
+                                                    <div>₹ 2.62</div>
+                                                    <div>₹ 23.60</div>
                                                     <div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
                                                 </li>
                                                 <li class="order-heading-titles">
                                                     <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
                                                     <div>Apr 2,2020</div>
-                                                    <div>£ 28.24</div>
-                                                    <div>£ 2.82</div>
-                                                    <div>£ 25.42</div>
+                                                    <div>₹ 28.24</div>
+                                                    <div>₹ 2.82</div>
+                                                    <div>₹ 25.42</div>
                                                     <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
                                                 </li>
                                             </ul>
