--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -35,7 +35,7 @@
                                             Total Revenue
                                         </div>
                                         <div class="card-body text-center">
-                                            <a href="#"><h5 class="card-title">$213</h5></a>
+                                            <a href="#"><h5 class="card-title">₹213</h5></a>
                                         </div>
                                     </div>
                                 </div>
@@ -45,7 +45,7 @@
                                             This Month
                                         </div>
                                         <div class="card-body text-center">
-                                            <a href="#"><h5 class="card-title">$165.0</h5></a>
+                                            <a href="#"><h5 class="card-title">₹165.0</h5></a>
                                         </div>
                                     </div>
                                 </div>
@@ -85,9 +85,9 @@
 														<li class="order-heading-titles">
 															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
 															<div>Apr 9,2020</div>
-															<div>£ 38.99</div>
-															<div>£ 3.90</div>
-															<div>£ 35.09</div>
+															<div>₹ 38.99</div>
+															<div>₹ 3.90</div>
+															<div>₹ 35.09</div>
 															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
 														</li>
 														
@@ -96,17 +96,17 @@
 														<li class="order-heading-titles">
 															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
 															<div>Apr 9,2020</div>
-															<div>£ 26.22</div>
-															<div>£ 2.62</div>
-															<div>£ 23.60</div>
+															<div>₹ 26.22</div>
+															<div>₹ 2.62</div>
+															<div>₹ 23.60</div>
 															<div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
 														</li>
 														<li class="order-heading-titles">
 															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
 															<div>Apr 2,2020</div>
-															<div>£ 28.24</div>
-															<div>£ 2.82</div>
-															<div>£ 25.42</div>
+															<div>₹ 28.24</div>
+															<div>₹ 2.82</div>
+															<div>₹ 25.42</div>
 															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
 														</li>
 													</ul>
