--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -45,7 +45,13 @@
                                             </div>
                                             {% if vendor.user_profile.address %}
                                             <span><small class= "text-muted">{{ vendor.user_profile.address }}</small></span>
-                                            {% endif %}    
+                                            {% endif %}  
+                                            
+                                            {% if source_location %}
+                                            <br>
+                                            <span><small><b>{{vendor.kms}}km</b> away from {{source_location}}</small></span>
+                                            {% endif %}
+                                            
                                         </div>
                                         <div class="list-option">
 
