--- a/templates/home.html
+++ b/templates/home.html
@@ -136,7 +136,7 @@
 										<div class="list-post featured">
 											<div class="img-holder">
 												<figure>
-													<a href="#">
+													<a href="{% url 'vendor_detail' vendor.vendor_slug %}">
 														{% if vendor.user_profile.profile_picture %}
 														<img src="{{ vendor.user_profile.profile_picture.url}}" class="img-thumb wp-post-image" alt="">
 														{% else %}
@@ -153,11 +153,16 @@
 												
 												<div class="post-title">
 													<h5>
-														<a href="listing-detail.html">{{ vendor }}</a>
+														<a href="{% url 'vendor_detail' vendor.vendor_slug %}">{{ vendor }}</a>
 													</h5>
 												</div>
 												{% if vendor.user_profile.city and vendor.user_profile.state and vendor.user_profile.pin_code %}
 												<span>{{ vendor.user_profile.city }}, {{ vendor.user_profile.state }}, {{ vendor.user_profile.pin_code }}  </span>
+												{% endif %}
+
+												{% if vendor.kms %}
+													<br>
+													<span><small><b>{{vendor.kms}} km </b>away</small></span>
 												{% endif %}
 											</div>
 											
