--- a/templates/home.html
+++ b/templates/home.html
@@ -145,9 +145,16 @@
 
 													</a>
 												</figure>
+												
+												{% if vendor.is_open %}
 												<span class="restaurant-status open">
 													<em class="bookmarkRibbon"></em>Open
 												</span>
+												{% else %}
+												<span class="restaurant-status close">
+													<em class="bookmarkRibbon"></em>Close
+												</span>
+												{% endif %}
 											</div>
 											<div class="text-holder">
 												
