--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -88,13 +88,18 @@
                                                     <span id="subtotal">{{ subtotal }}</span>
                                                 </span>
                                             </li>
-                                            <li style="list-style-type: none;">
-                                                TAX
-                                                <span class="price float-right">
-                                                    <span class="currency">₹</span>
-                                                    <span id="subtotal">{{ tax }}</span>
-                                                </span>
-                                            </li>
+                                            
+                                            {% for key, value in tax_dict.items %}
+                                                {% for i, j in value.items %}
+                                                    <li style="list-style-type: none;">
+                                                        {{ key }} <small>({{ i }}%)</small>
+                                                        <span class="price float-right">
+                                                            <span class="currency">$</span>
+                                                            <span id="tax-{{ key }}">{{ j }}</span>
+                                                        </span>
+                                                    </li>
+                                                {% endfor %}
+                                            {% endfor %}
                                                 
                                             <li style="list-style-type: none; font-weight: 600;">
                                                 TOTAL
