--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
 							<div class="logo">
 								<figure>
 									<a href="{% url 'home' %}" class="light-logo">
-										<img src="{% static 'logo/foodOnlineLogo.png'%}" alt="CraveConnect" width="250">
+										<img src="{% static 'logo/CraveConnect.png'%}" alt="CraveConnect" width="250">
 									</a>
 								</figure>
 							</div>
