--- a/templates/accounts/custDashboard.html
+++ b/templates/accounts/custDashboard.html
@@ -64,10 +64,10 @@
                                                   <tr>
                                                     <td>{{ order.order_number }}</td>
                                                     <td>{{ order.name }}</td>
-                                                    <td>${{ order.total }}</td>
+                                                    <td>₹{{ order.total }}</td>
                                                     <td>{{ order.status }}</td>
                                                     <td>{{ order.created_at }}</td>
-                                                    <td><a href="" class="btn btn-danger">Details</a></td>
+                                                    <td><a href="{% url 'order_detail' order.order_number %}"class="btn btn-danger">Details</a></td>
                                                   </tr>
                                                   {% endfor %}
                                                 </tbody>
