--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -38,7 +38,7 @@
 								{% endif %}
 								<a href="{% url 'marketplace'%}" class= "btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
 								{% if  user.is_authenticated %}
-								<a class="cs-color cs-popup-joinus-btn login-popup"  href="{% url 'custDashboard' %}">My Account </a>
+								<a class="cs-color cs-popup-joinus-btn login-popup"  href="{% url 'myAccount' %}">My Account </a>
 								<a class="cs-color cs-popup-joinus-btn login-popup text-danger"  href="{% url 'logout' %}">Logout</a>
 								{% else %}
 								<a class="cs-color cs-popup-joinus-btn login-popup"  href="{% url 'login' %}">Login</a> / 
