--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -6,11 +6,11 @@
             <li class="{% if 'menu-builder' in request.path %}active{% endif %}"><a href="{% url 'menu_builder' %}"><i class="icon-menu5"></i>Menu Builder</a></li>
             <li class="{% if 'opening-hour' in request.path %}active{% endif %}"><a href="{% url 'opening_hours' %}"><i class="icon-menu5"></i>Opening Hours</a></li>
 
-            <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
-            <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
-            <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
-            <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if '/my_orders/' in request.path %}active{% endif %}"><a href="{% url 'vendor_my_orders' %}"><i class="icon-add_shopping_cart"></i>Orders</a></li>
+            {% comment %} <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li> {% endcomment %}
+            {% comment %} <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li> {% endcomment %}
+            {% comment %} <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li> {% endcomment %}
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
         </ul>
     </div>
 </div>
