--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
 														<div class="foodbakery-locations-fields-group foodbakery-focus-out">
 															<span class="foodbakery-search-location-icon"><i class="icon-location"></i></span>
 															
-															<input type="text" name="address" class="location-field-text filter" id="id_address" required placeholder="All Locations">
+															<input type="text" name="address" class="location-field-text filter" id="id_address" placeholder="All Location">
 															<input type="hidden" name="lat" value="" id="id_latitude">
 															<input type="hidden" name="lng" value="" id="id_longitude">
 														</div>
