--- a/templates/orders/new_order_received.html
+++ b/templates/orders/new_order_received.html
@@ -30,14 +30,15 @@
   <table role="presentation" width="100%">
     <tr>
     <td  align="center" style="color: white;">
-     <img alt="Logo" src="https://rathank.com/foodonline/logo/logo.png" width="400px" align="middle">
+     <img alt="Logo" src="#" width="400px" align="middle">
       </td>
   </table>
 
   <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
     <tr>
         <td>
-            <h2 style="text-align:center;">Thank you for your order</h2>
+            <h2 style="text-align:center;">You received a New Order</h2>
+            <h3 style="color: #C33332; font-weight: bold; text-align: center;">!! This order should be complete as soon as possible !!</h3>
             <p>Review your order information below.</p>
         </td>
     </tr>
