--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,3 +13,76 @@
     animation-duration: 8s;
     z-index: 99;
 }
+
+.btn{
+    padding: 2px 1.75em;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.main-search.fancy .field-holder input[type="text"]{
+    color: #000000 !important;
+}
+
+table > tbody > tr > td{
+    border: none !important;
+}
+
+#opening_hours select{
+    padding: 5px 10px !important;
+}
+.btn-success.add_hour{
+    padding: 7px 15px 7px 15px;
+}
+
+/* hide radio button */
+.payment-method [type=radio]{
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* Image style */
+.payment-method [type=radio] + img{
+    cursor: pointer;
+    padding: 5px;
+}
+
+/* Checked style */
+.payment-method [type=radio]:checked + img{
+    outline: 2px solid #ff0000;
+}
+
+@media only screen and (max-width: 480px) {
+    a.get-start-btn{
+        display: block;
+        margin-top: 15px !important;
+        margin-left: 0 !important;
+    }
+    .main-search-bar{
+        padding-top: 100px !important;
+        padding-bottom: 50px !important;
+        background-position: right !important;
+    }
+    .user-dashboard{
+        width: 100% !important;
+    }
+    .menu-itam-holder .quantity{
+        right: 0 !important;
+        margin-top: -30px !important;
+    }
+    .table.opening_hours{
+        width: 100% !important;
+    }
+    .table td{
+        padding: 0.5rem !important;
+    }
+
+
+}
+
+table td, table th{
+    line-height: 1rem !important;
+}
+
