--- a/templates/home.html
+++ b/templates/home.html
@@ -172,7 +172,11 @@
 													<span><small><b>{{vendor.kms}} km </b>away</small></span>
 												{% endif %}
 											</div>
-											
+											<div class="list-option">
+												<a href="javascript:void(0);" class="shortlist-btn" data-toggle="modal" data-target="#sign-in">
+													<i class="icon-heart-o"></i>
+												</a>
+											</div>
 										</div>
 									</li>
 									{% endfor %}	
